-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11
-
Component/s: hotspot
-
b01
-
Verified
There are missing NULL checks in some JNIHandles functions.
The assertion gets hit on all platforms. Stack on Windows:
V [jvm.dll+0xbb501d] VMError::report_and_die+0x5d (vmerror.cpp:1241)
V [jvm.dll+0x5286f8] report_vm_error+0x78 (debug.cpp:216)
V [jvm.dll+0x9e4e0a] OopStorage::allocation_status+0x4a (oopstorage.cpp:611)
V [jvm.dll+0x755c98] JNIHandles::handle_type+0x48 (jnihandles.cpp:209)
V [jvm.dll+0x72e987] jni_GetObjectRefType+0x1c7 (jni.cpp:868)
The assertion gets hit on all platforms. Stack on Windows:
V [jvm.dll+0xbb501d] VMError::report_and_die+0x5d (vmerror.cpp:1241)
V [jvm.dll+0x5286f8] report_vm_error+0x78 (debug.cpp:216)
V [jvm.dll+0x9e4e0a] OopStorage::allocation_status+0x4a (oopstorage.cpp:611)
V [jvm.dll+0x755c98] JNIHandles::handle_type+0x48 (jnihandles.cpp:209)
V [jvm.dll+0x72e987] jni_GetObjectRefType+0x1c7 (jni.cpp:868)
- relates to
-
JDK-8194312 Support parallel and concurrent JNI global handle processing
-
- Resolved
-