8195690: JNI GetObjectRefType doesn't handle NULL

Properly handle NULL, add some non-NULL preconditions.

Reviewed-by: dholmes, mdoerr